fix: change text align in reviews max-widht 576px

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -378,6 +378,9 @@
       margin: 0 auto 40px
       font-size: 18px
       line-height: 23px
+    &-slider
+      &__text
+        text-align: left
   .activities
     padding: 40px 0 60px
     &__title
